<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/shoeName_textVIew"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/shoeName_text"
            android:textAllCaps="true"
            android:textSize="20sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/company_textView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/company_text"
            android:textAllCaps="true"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/size_textView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/size_text"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/desc_textView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/desc_textView" />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>