<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <!--  I'm using constraint layout here as all the views need to be put in a symmetrical order and
          with constraint layout we can use chaining to bind them together  -->
    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/instruction_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".screens.InstructionFragment">

        <TextView
            android:id="@+id/instruct_label_textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:text="@string/instruct_label_text"
            app:layout_constraintBottom_toTopOf="@+id/instruct_textView"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_chainStyle="packed" />

        <TextView
            android:id="@+id/instruct_textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/instruct_textView"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/instruct_label_textView" />

        <Button
            android:id="@+id/instruc_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/instruc_button_text"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/instruct_textView" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>