<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="?attr/actionBarSize"
        tools:context=".screens.ShoeDetailFragment">

        <TextView
            android:id="@+id/type_textView"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:text="@string/typeTextView_label"
            android:textAlignment="center"
            android:textColor="@android:color/black"
            app:layout_constraintBaseline_toBaselineOf="@+id/data_textView"
            app:layout_constraintEnd_toStartOf="@+id/data_textView"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintHorizontal_chainStyle="packed"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/data_textView"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="32dp"
            android:layout_marginEnd="16dp"
            android:text="@string/dataTextView_label"
            android:textAlignment="center"
            android:textColor="@android:color/black"
            app:layout_constraintBottom_toTopOf="@+id/shoeName_editText"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/type_textView"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_chainStyle="spread_inside" />

        <TextView
            android:id="@+id/shoeName_textView"
            android:layout_width="0dp"
            android:layout_height="35dp"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:text="@string/shoeName_text"
            android:textAlignment="center"
            android:textColor="@android:color/black"
            app:layout_constraintBaseline_toBaselineOf="@+id/shoeName_editText"
            app:layout_constraintEnd_toStartOf="@+id/shoeName_editText"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintHorizontal_chainStyle="packed"
            app:layout_constraintStart_toStartOf="parent" />

        <EditText
            android:id="@+id/shoeName_editText"
            android:layout_width="0dp"
            android:layout_height="35dp"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:ems="10"
            android:hint="@string/shoeName_text"
            android:inputType="textPersonName"
            android:textColor="@android:color/black"
            android:textSize="12sp"
            app:layout_constraintBottom_toTopOf="@+id/companyName_editText"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/shoeName_textView"
            app:layout_constraintTop_toBottomOf="@+id/data_textView"
            android:text="@={sharedModel._shoe_.name}"/>


        <TextView
            android:id="@+id/companyName_textView"
            android:layout_width="0dp"
            android:layout_height="35dp"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:text="@string/company_text"
            android:textAlignment="center"
            android:textColor="@android:color/black"
            app:layout_constraintBaseline_toBaselineOf="@+id/companyName_editText"
            app:layout_constraintEnd_toStartOf="@+id/companyName_editText"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintHorizontal_chainStyle="packed"
            app:layout_constraintStart_toStartOf="parent" />

        <EditText
            android:id="@+id/companyName_editText"
            android:layout_width="0dp"
            android:layout_height="35dp"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:ems="10"
            android:hint="@string/company_text"
            android:inputType="textPersonName"
            android:textColor="@android:color/black"
            android:textSize="12sp"
            app:layout_constraintBottom_toTopOf="@+id/shoeSize_editText"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/companyName_textView"
            app:layout_constraintTop_toBottomOf="@+id/shoeName_editText"
            android:text="@={sharedModel._shoe_.company}"/>


        <TextView
            android:id="@+id/shoeSize_textView"
            android:layout_width="0dp"
            android:layout_height="35dp"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:text="@string/size_text"
            android:textAlignment="center"
            android:textColor="@android:color/black"
            app:layout_constraintBaseline_toBaselineOf="@+id/shoeSize_editText"
            app:layout_constraintEnd_toStartOf="@+id/shoeSize_editText"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintHorizontal_chainStyle="packed"
            app:layout_constraintStart_toStartOf="parent" />

        <EditText
            android:id="@+id/shoeSize_editText"
            android:layout_width="0dp"
            android:layout_height="35dp"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:ems="10"
            android:hint="@string/size_text"
            android:inputType="number"
            android:textColor="@android:color/black"
            android:textSize="12sp"
            app:layout_constraintBottom_toTopOf="@+id/description_editText"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/shoeSize_textView"
            app:layout_constraintTop_toBottomOf="@+id/companyName_editText"
            android:text="@={``+sharedModel._shoe_.size}"/>


        <TextView
            android:id="@+id/description_textView"
            android:layout_width="0dp"
            android:layout_height="35dp"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:text="@string/desc_textView"
            android:textAlignment="center"
            android:textColor="@android:color/black"
            app:layout_constraintBaseline_toBaselineOf="@+id/description_editText"
            app:layout_constraintEnd_toStartOf="@+id/description_editText"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintHorizontal_chainStyle="packed"
            app:layout_constraintStart_toStartOf="parent" />

        <EditText
            android:id="@+id/description_editText"
            android:layout_width="0dp"
            android:layout_height="90dp"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:ems="10"
            android:hint="@string/desc_textView"
            android:inputType="textPersonName"
            android:textAlignment="textStart"
            android:textColor="@android:color/black"
            android:textSize="12sp"
            app:layout_constraintBottom_toTopOf="@+id/save_btn"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/description_textView"
            app:layout_constraintTop_toBottomOf="@+id/shoeSize_editText"
            android:text="@={sharedModel._shoe_.description}"/>


        <Button
            android:id="@+id/cancel_btn"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:text="@string/cancelBtn_text"
            app:layout_constraintBaseline_toBaselineOf="@+id/save_btn"
            app:layout_constraintEnd_toStartOf="@+id/save_btn"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintHorizontal_chainStyle="packed"
            app:layout_constraintStart_toStartOf="parent" />

        <Button
            android:id="@+id/save_btn"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="32dp"
            android:text="@string/saveBtn_text"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/cancel_btn"
            app:layout_constraintTop_toBottomOf="@+id/description_editText" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <data>

        <variable
            name="sharedModel"
            type="com.udacity.shoestore.models.SharedViewModel" />
    </data>
</layout>